[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes_fonts/space_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/winbutton_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/winbutton.png" type="Texture" id=3]
[ext_resource path="res://subscenes/broadcast/full_screen_round/map_game_control.gd" type="Script" id=4]
[ext_resource path="res://assets/winbutton_disabled.png" type="Texture" id=5]

[node name="MapGameControl" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Left" type="MarginContainer" parent="."]
margin_right = 50.0
margin_bottom = 1080.0

[node name="WinButton" type="TextureButton" parent="Left"]
margin_left = 5.0
margin_top = 520.0
margin_right = 45.0
margin_bottom = 560.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 2
size_flags_vertical = 4
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 5 )
stretch_mode = 3

[node name="Label" type="Label" parent="Left"]
visible = false
margin_left = 5.0
margin_top = 520.0
margin_right = 45.0
margin_bottom = 560.0
rect_min_size = Vector2( 40, 40 )
text = "W"

[node name="MapName" type="Label" parent="."]
margin_left = 54.0
margin_top = 520.0
margin_right = 1866.0
margin_bottom = 559.0
size_flags_horizontal = 3
text = "..."
align = 1

[node name="Right" type="MarginContainer" parent="."]
margin_left = 1870.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="WinButton" type="TextureButton" parent="Right"]
margin_left = 5.0
margin_top = 520.0
margin_right = 45.0
margin_bottom = 560.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 2
size_flags_vertical = 4
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 5 )
stretch_mode = 3
flip_h = true

[node name="Label" type="Label" parent="Right"]
visible = false
margin_left = 5.0
margin_top = 520.0
margin_right = 45.0
margin_bottom = 560.0
rect_min_size = Vector2( 40, 40 )
text = "W"

[connection signal="pressed" from="Left/WinButton" to="." method="_on_LeftWinButton_pressed"]
[connection signal="pressed" from="Right/WinButton" to="." method="_on_RightWinButton_pressed"]
